# OpenGL-Example

./: .gitignore  CMakeLists.txt  Camera.cpp  Object.h  OpenGL-Example.sln  README.md  Renderer.cpp  Renderer.h  Shader.h
OpenGL-Example/: OpenGL-Example.vcxproj  OpenGL-Example.vcxproj.filters  Renderer.cpp  Renderer.h
OpenGL-Example/Shaders/: FragmentShaderForObject.glsl  VertexShaderForObject.glsl
cmake/: add-libraries-linux.cmake  target-link-libraries-linux.cmake
include/: Shader.h  light.h  object.h  renderer.h  shader.h
shaders/: BasicPipeline.frag  BasicPipeline.vert  scene_shader.frag  scene_shader.vert
source/: Object.cpp  Shader.cpp  camera.cpp  light.cpp  object.cpp  renderer.cpp  shader.cpp
